Fixed import button background not showing + fixed show more bookmarks button

--- a/Private Mode Style/userChrome.css
+++ b/Private Mode Style/userChrome.css
@@ -393,6 +393,16 @@ toolbar .toolbaritem-combined-buttons > .toolbarbutton-1:-moz-any([open], [check
 toolbar .toolbarbutton-1[data-extensionid]:-moz-any([open], [checked], :active) {
     background: radial-gradient(circle, rgba(255,255,255,0.2) 49%, rgba(255,255,255,0) 50%) !important;
 }
+#TabsToolbar .toolbarbutton-1:not([disabled="true"]):-moz-any([open], [checked], :active) > .toolbarbutton-icon,
+#TabsToolbar .toolbarbutton-1:not([disabled="true"]):-moz-any([open], [checked], :hover, :active) > .toolbarbutton-badge-stack  {
+    background: rgba(255,255,255, 0.2) !important;
+    clip-path: none !important;
+}
+#PersonalToolbar .toolbarbutton-1:not([disabled="true"]):-moz-any([open], [checked], :hover, :active),
+#PersonalToolbar .toolbarbutton-1:not([disabled="true"]):-moz-any([open], [checked], :hover, :active) > .toolbarbutton-badge-stack {
+    background: rgba(255,255,255,0.2) !important;
+    clip-path: none !important;
+}
 #PanelUI-button {
     border: none !important;
     margin-left: 0px !important;
@@ -691,7 +701,8 @@ toolbar .toolbarbutton-1:not(#back-button):not(#forward-button):not(#reload-butt
     min-height: 33px !important;
 }
 #PlacesChevron {
-    margin: 5px !important;
+    padding: 5px 6px !important;
+    margin: 3px !important;
 }
 #import-button {
     margin-left: 3px !important;
@@ -968,11 +979,6 @@ menubar > menu[open] {
 #profiler-button > .toolbarbutton-menu-dropmarker:not(:-moz-lwtheme-brighttext) {
     filter: none !important; 
 }}
-#TabsToolbar .toolbarbutton-1:not([disabled="true"]):-moz-any([open], [checked], :active) > .toolbarbutton-icon,
-#TabsToolbar .toolbarbutton-1:not([disabled="true"]):-moz-any([open], [checked], :hover, :active) > .toolbarbutton-badge-stack  {
-    background: rgba(255,255,255, 0.2) !important;
-    clip-path: none !important;
-}
 :root {
     --toolbarbutton-hover-background: #503da8 !important;
     --toolbarbutton-active-background: #503da8 !important;
