--- a/base.css
+++ b/base.css
@@ -520,6 +520,11 @@ toolbar .toolbarbutton-1[data-extensionid]:-moz-any([open], [checked], :active) 
     background: rgba(51,51,51, 0.15) !important;
     clip-path: none !important;
 }
+#PersonalToolbar .toolbarbutton-1:not([disabled="true"]):-moz-any([open], [checked], :hover, :active),
+#PersonalToolbar .toolbarbutton-1:not([disabled="true"]):-moz-any([open], [checked], :hover, :active) > .toolbarbutton-badge-stack {
+    background: rgba(51,51,51, 0.15) !important;
+    clip-path: none !important;
+}
 #PanelUI-button {
     border: none !important;
     margin-left: 0px !important;
@@ -824,7 +829,8 @@ toolbar .toolbarbutton-1:not(#back-button):not(#forward-button):not(#reload-butt
     min-height: 33px !important;
 }
 #PlacesChevron {
-    margin: 5px !important;
+    padding: 5px 6px !important;
+    margin: 3px !important;
 }
 #import-button {
     margin-left: 3px !important;
@@ -1030,6 +1036,11 @@ toolbar .toolbarbutton-1[data-extensionid]:-moz-any([open], [checked], :hover, :
 }
 #TabsToolbar .toolbarbutton-1:not([disabled="true"]):-moz-any([open], [checked], :active) > .toolbarbutton-icon:-moz-lwtheme-brighttext,
 #TabsToolbar .toolbarbutton-1:not([disabled="true"]):-moz-any([open], [checked], :active) > .toolbarbutton-badge-stack:-moz-lwtheme-brighttext  {
+    background: rgba(255,255,255, 0.2) !important;
+    clip-path: none !important;
+}
+#PersonalToolbar .toolbarbutton-1:not([disabled="true"]):-moz-any([open], [checked], :hover, :active):-moz-lwtheme-brighttext,
+#PersonalToolbar .toolbarbutton-1:not([disabled="true"]):-moz-any([open], [checked], :hover, :active) > .toolbarbutton-badge-stack:-moz-lwtheme-brighttext {
     background: rgba(255,255,255, 0.2) !important;
     clip-path: none !important;
 }
@@ -1303,6 +1314,11 @@ toolbar .toolbarbutton-1[data-extensionid]:-moz-any([open], [checked], :active) 
 }
 #TabsToolbar .toolbarbutton-1:not([disabled="true"]):-moz-any([open], [checked], :active) > .toolbarbutton-icon,
 #TabsToolbar .toolbarbutton-1:not([disabled="true"]):-moz-any([open], [checked], :active) > .toolbarbutton-badge-stack {
+    background: rgba(255,255,255, 0.2) !important;
+    clip-path: none !important;
+}
+#PersonalToolbar .toolbarbutton-1:not([disabled="true"]):-moz-any([open], [checked], :hover, :active),
+#PersonalToolbar .toolbarbutton-1:not([disabled="true"]):-moz-any([open], [checked], :hover, :active) > .toolbarbutton-badge-stack {
     background: rgba(255,255,255, 0.2) !important;
     clip-path: none !important;
 }
@@ -1629,6 +1645,11 @@ private browsing
 #main-window[privatebrowsingmode="temporary"] #TabsToolbar .toolbarbutton-1:not([disabled="true"]):-moz-any([open], [checked], :active) > .toolbarbutton-icon,
 #main-window[privatebrowsingmode="temporary"] #TabsToolbar .toolbarbutton-1:not([disabled="true"]):-moz-any([open], [checked], :hover, :active) > .toolbarbutton-badge-stack  {
     background: rgba(255,255,255,0.2) !important;
+    clip-path: none !important;
+}
+#main-window[privatebrowsingmode="temporary"] #PersonalToolbar .toolbarbutton-1:not([disabled="true"]):-moz-any([open], [checked], :hover, :active),
+#main-window[privatebrowsingmode="temporary"] #PersonalToolbar .toolbarbutton-1:not([disabled="true"]):-moz-any([open], [checked], :hover, :active) > .toolbarbutton-badge-stack {
+    background: rgba(255,255,255, 0.2) !important;
     clip-path: none !important;
 }
 :root[privatebrowsingmode="temporary"] {
